Extracting the Datasets

--- a/Alz_Voice.ipynb
+++ b/Alz_Voice.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNNQo6uYojjlDnNq6LtlfXa",
+      "authorship_tag": "ABX9TyNuYLAmMbW3cnf1Kj+YywQY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -270,6 +270,15 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Extracting the Datasets"
+      ],
+      "metadata": {
+        "id": "Rl4Md0jxeMlk"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import tarfile\n",
@@ -289,52 +298,49 @@
       "metadata": {
         "id": "MHO7uLX4c2fZ"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "# Define paths"
-      ],
-      "metadata": {
-        "id": "BKPVxEScbTfU"
-      }
-    },
-    {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import pandas as pd\n",
+        "import librosa\n",
+        "from pathlib import Path\n",
+        "\n",
+        "def load_audio_files(audio_dir):\n",
+        "    audio_files = {}\n",
+        "    for wav_file in Path(audio_dir).glob('*.wav'):\n",
+        "        audio, sr = librosa.load(wav_file, sr=16000)  # Standardize to 16kHz\n",
+        "        audio_files[wav_file.stem] = audio\n",
+        "    return audio_files\n",
+        "\n",
+        "def load_csv_files(csv_dir):\n",
+        "    csv_data = {}\n",
+        "    for csv_file in Path(csv_dir).glob('*.csv'):\n",
+        "        csv_data[csv_file.stem] = pd.read_csv(csv_file)\n",
+        "    return csv_data\n",
+        "\n",
+        "# Load diagnosis train data\n",
+        "ad_audio = load_audio_files('/content/dataset/ADReSSo21/diagnosis/train/audio/ad')\n",
+        "cn_audio = load_audio_files('/content/dataset/ADReSSo21/diagnosis/train/audio/cn')\n",
+        "ad_csv = load_csv_files('/content/dataset/ADReSSo21/diagnosis/train/segmentation/ad')\n",
+        "cn_csv = load_csv_files('/content/dataset/ADReSSo21/diagnosis/train/segmentation/cn')\n",
+        "\n",
+        "# Load progression train data\n",
+        "decline_audio = load_audio_files('/content/dataset/ADReSSo21/progression/train/audio/decline')\n",
+        "no_decline_audio = load_audio_files('/content/dataset/ADReSSo21/progression/train/audio/no_decline')\n",
+        "decline_csv = load_csv_files('/content/dataset/ADReSSo21/progression/train/segmentation/decline')\n",
+        "no_decline_csv = load_csv_files('/content/dataset/ADReSSo21/progression/train/segmentation/no_decline')\n",
+        "\n",
+        "# Load progression test data\n",
+        "test_audio = load_audio_files('/content/dataset/ADReSSo21/progression/test-dist/audio')\n",
+        "test_csv = load_csv_files('/content/dataset/ADReSSo21/progression/test-dist/segmentation')"
+      ],
       "metadata": {
         "id": "s_CA7MTBdT0s"
       },
       "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "-aD7qeS_dTyC"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "Z3qzVhJfdTvk"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "nfWcKBB9bwZC"
-      },
-      "execution_count": 16,
       "outputs": []
     }
   ]
