Loading Audio and CSV Files

--- a/Alz_Voice.ipynb
+++ b/Alz_Voice.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNuYLAmMbW3cnf1Kj+YywQY",
+      "authorship_tag": "ABX9TyNL5Jzs7T/s6DG75/b2LudT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -302,6 +302,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Loading Audio and CSV Files"
+      ],
+      "metadata": {
+        "id": "PgFUKf_geobm"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import pandas as pd\n",
@@ -340,7 +349,7 @@
       "metadata": {
         "id": "s_CA7MTBdT0s"
       },
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": []
     }
   ]
