--- a/Alz_Voice.ipynb
+++ b/Alz_Voice.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNL5Jzs7T/s6DG75/b2LudT",
+      "authorship_tag": "ABX9TyNLKYNYS4uQ1knITZMlnK18",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -351,6 +351,15 @@
       },
       "execution_count": 19,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Feature Extraction"
+      ],
+      "metadata": {
+        "id": "8X0bWgTHexBf"
+      }
     }
   ]
 }
