run until epoch 8

--- a/Denoise_May18.ipynb
+++ b/Denoise_May18.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNJKxgHjy53ax+LvHK2LsnS",
+      "authorship_tag": "ABX9TyNmxGS7KvqE1ivE+ma/03Wu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -84,29 +84,19 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 602
+          "height": 449
         },
         "id": "digFLYgtKUT6",
-        "outputId": "00638f63-aee5-462e-dde4-d8e9058224e3"
+        "outputId": "c06b794d-9751-41f9-ab15-e819d1be9abe"
       },
-      "execution_count": 1,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mounted at /content/drive\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m363.4/363.4 MB\u001b[0m \u001b[31m4.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m13.8/13.8 MB\u001b[0m \u001b[31m117.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m24.6/24.6 MB\u001b[0m \u001b[31m87.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m883.7/883.7 kB\u001b[0m \u001b[31m51.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m664.8/664.8 MB\u001b[0m \u001b[31m2.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m211.5/211.5 MB\u001b[0m \u001b[31m5.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m56.3/56.3 MB\u001b[0m \u001b[31m12.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m127.9/127.9 MB\u001b[0m \u001b[31m7.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m207.5/207.5 MB\u001b[0m \u001b[31m5.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m21.1/21.1 MB\u001b[0m \u001b[31m99.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hInstalled Packages:\n",
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n",
+            "Installed Packages:\n",
             "         Package       Version\n",
             "0          torch   2.6.0+cu124\n",
             "1    torchvision  0.21.0+cu124\n",
@@ -263,28 +253,17 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 679
+          "height": 489
         },
         "id": "tuUnOdA5KiUi",
-        "outputId": "994346d4-268f-45dd-db96-0a97ef561925"
+        "outputId": "1bd1bbe3-25dd-4402-9811-08ce20915ec2"
       },
-      "execution_count": 2,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2025-05-18 07:02:46--  https://www2.eecs.berkeley.edu/Research/Projects/CS/vision/grouping/BSR/BSR_bsds500.tgz\n",
-            "Resolving www2.eecs.berkeley.edu (www2.eecs.berkeley.edu)... 128.32.244.190\n",
-            "Connecting to www2.eecs.berkeley.edu (www2.eecs.berkeley.edu)|128.32.244.190|:443... connected.\n",
-            "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: 70763455 (67M) [application/x-tar]\n",
-            "Saving to: ‘BSR_bsds500.tgz’\n",
-            "\n",
-            "BSR_bsds500.tgz     100%[===================>]  67.48M  89.2MB/s    in 0.8s    \n",
-            "\n",
-            "2025-05-18 07:02:47 (89.2 MB/s) - ‘BSR_bsds500.tgz’ saved [70763455/70763455]\n",
-            "\n",
             "Dataset loaded successfully\n",
             "Processing BSR dataset...\n",
             "Dataset Statistics:\n",
@@ -517,9 +496,9 @@
           "height": 394
         },
         "id": "G7VMpbflLOZR",
-        "outputId": "8bfa1347-5d90-42b5-f5d9-e66188546740"
+        "outputId": "9be6ab6a-e6d0-4c80-d4a1-a19b15926356"
       },
-      "execution_count": 3,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -836,7 +815,7 @@
           "height": 575
         },
         "id": "2y15ibFWLrRW",
-        "outputId": "486d0f6b-683e-4746-c6f6-f743dedcae6a"
+        "outputId": "428ad929-e775-4ebb-934d-0d45aae2959f"
       },
       "execution_count": 6,
       "outputs": [
@@ -886,24 +865,33 @@
         "import torch\n",
         "import torch.optim as optim\n",
         "from torch.utils.data import DataLoader\n",
+        "from torch.optim.lr_scheduler import StepLR  # Added import for StepLR\n",
         "import time\n",
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n",
+        "import os\n",
+        "import glob\n",
+        "\n",
+        "# Define base_dir (ensure consistency with previous cells)\n",
+        "base_dir = '/content/drive/MyDrive/SSNet'\n",
         "\n",
         "def findLastCheckpoint(save_path):\n",
         "    files = glob.glob(os.path.join(save_path, '*.pth'))\n",
         "    last_epoch = -1\n",
         "    for fi in files:\n",
-        "        epoch = int(os.path.basename(fi)[-7:-4])\n",
-        "        if last_epoch < epoch:\n",
-        "            last_epoch = epoch\n",
+        "        try:\n",
+        "            epoch = int(os.path.basename(fi)[-7:-4])\n",
+        "            if last_epoch < epoch:\n",
+        "                last_epoch = epoch\n",
+        "        except ValueError:\n",
+        "            continue\n",
         "    return last_epoch\n",
         "\n",
         "def train():\n",
         "    class Args:\n",
         "        model_name = 'MyModel'\n",
         "        data_path = f'{base_dir}/data'\n",
-        "        batchSize = 16\n",
+        "        batchSize = 8  # Reduced from 16 to avoid CUDA out-of-memory\n",
         "        epochs = 10  # Reduced for demo; increase to 90 for full training\n",
         "        lr = 1e-3\n",
         "        outf = f'{base_dir}/saved_models'\n",
@@ -911,10 +899,14 @@
         "    opt = Args()\n",
         "\n",
         "    print('Loading dataset...')\n",
-        "    dataset_train = BSRDataset(opt.data_path, train=True)\n",
-        "    dataset_val = BSRDataset(opt.data_path, train=False)\n",
-        "    loader_train = DataLoader(dataset=dataset_train, num_workers=2, batch_size=opt.batchSize, shuffle=True)\n",
-        "    print(f\"# of training samples: {len(dataset_train)}\")\n",
+        "    try:\n",
+        "        dataset_train = BSRDataset(opt.data_path, train=True)\n",
+        "        dataset_val = BSRDataset(opt.data_path, train=False)\n",
+        "        loader_train = DataLoader(dataset=dataset_train, num_workers=2, batch_size=opt.batchSize, shuffle=True)\n",
+        "        print(f\"# of training samples: {len(dataset_train)}\")\n",
+        "    except Exception as e:\n",
+        "        print(f\"Error loading dataset: {e}\")\n",
+        "        return\n",
         "\n",
         "    model = UNet_Atten_3()\n",
         "    criterion = sum_squared_error()\n",
@@ -925,9 +917,15 @@
         "    scheduler = StepLR(optimizer, step_size=30, gamma=0.2)\n",
         "\n",
         "    save_path = os.path.join(opt.outf, opt.model_name)\n",
+        "    os.makedirs(save_path, exist_ok=True)\n",
         "    initial_epoch = findLastCheckpoint(save_path)\n",
         "    if initial_epoch != -1:\n",
-        "        model.load_state_dict(torch.load(os.path.join(save_path, f'{opt.model_name}{initial_epoch:03d}.pth')))\n",
+        "        try:\n",
+        "            model.load_state_dict(torch.load(os.path.join(save_path, f'{opt.model_name}{initial_epoch:03d}.pth')))\n",
+        "            print(f\"Loaded checkpoint from epoch {initial_epoch}\")\n",
+        "        except Exception as e:\n",
+        "            print(f\"Error loading checkpoint: {e}\")\n",
+        "            initial_epoch = -1\n",
         "    initial_epoch += 1\n",
         "\n",
         "    losses = []\n",
@@ -935,8 +933,8 @@
         "    for epoch in range(initial_epoch, opt.epochs):\n",
         "        start_time = time.time()\n",
         "        epoch_loss = 0\n",
+        "        model.train()\n",
         "        for i, data in enumerate(loader_train, 0):\n",
-        "            model.train()\n",
         "            optimizer.zero_grad()\n",
         "            img_train = data\n",
         "            noise_gauss = torch.zeros(img_train.size())\n",
@@ -957,8 +955,12 @@
         "                sizeN = noise_final_gauss[0, :, :, :].size()\n",
         "                noise_final_gauss[n, :, :, :] = torch.FloatTensor(sizeN).normal_(mean=0, std=stdN[n]/255.)\n",
         "\n",
-        "            imgn_train, wm, scale_lists, idx_lists = add_watermark_noise(img_train)\n",
-        "            imgn_train_final_, wm_final, _, _ = add_watermark_noise(img_train, scale_lists, idx_lists)\n",
+        "            try:\n",
+        "                imgn_train, wm, scale_lists, idx_lists = add_watermark_noise(img_train)\n",
+        "                imgn_train_final_, wm_final, _, _ = add_watermark_noise(img_train, scale_lists, idx_lists)\n",
+        "            except Exception as e:\n",
+        "                print(f\"Error adding watermark noise: {e}\")\n",
+        "                continue\n",
         "\n",
         "            imgn_train_mid = torch.Tensor(imgn_train) + noise_gauss_mid\n",
         "            imgn_train = torch.Tensor(imgn_train) + noise_gauss\n",
@@ -969,20 +971,28 @@
         "            imgn_train_final, imgn_train_mid = imgn_train_final.cuda(), imgn_train_mid.cuda()\n",
         "            imgn_train_final_ = imgn_train_final_.cuda()\n",
         "\n",
-        "            main_out_final, out_denoise, out_wm = model(imgn_train)\n",
-        "            loss = (criterion(main_out_final, imgn_train_final) + criterion(out_denoise, imgn_train_mid) + criterion(out_wm, imgn_train_final_)) / (imgn_train.size()[0] * 2)\n",
+        "            try:\n",
+        "                main_out_final, out_denoise, out_wm = model(imgn_train)\n",
+        "                loss = (criterion(main_out_final, imgn_train_final) +\n",
+        "                        criterion(out_denoise, imgn_train_mid) +\n",
+        "                        criterion(out_wm, imgn_train_final_)) / (imgn_train.size()[0] * 2)\n",
         "\n",
-        "            loss.backward()\n",
-        "            optimizer.step()\n",
-        "            epoch_loss += loss.item()\n",
+        "                loss.backward()\n",
+        "                optimizer.step()\n",
+        "                epoch_loss += loss.item()\n",
+        "            except RuntimeError as e:\n",
+        "                print(f\"Runtime error during training: {e}\")\n",
+        "                continue\n",
         "\n",
         "        scheduler.step()\n",
         "        avg_loss = epoch_loss / len(loader_train)\n",
         "        losses.append(avg_loss)\n",
         "        print(f'Epoch {epoch}, Loss: {avg_loss:.4f}, Time: {time.time()-start_time:.2f}s')\n",
         "\n",
-        "        os.makedirs(save_path, exist_ok=True)\n",
-        "        torch.save(model.state_dict(), os.path.join(save_path, f'{opt.model_name}{epoch:03d}.pth'))\n",
+        "        try:\n",
+        "            torch.save(model.state_dict(), os.path.join(save_path, f'{opt.model_name}{epoch:03d}.pth'))\n",
+        "        except Exception as e:\n",
+        "            print(f\"Error saving checkpoint: {e}\")\n",
         "\n",
         "    # Plot loss\n",
         "    plt.figure(figsize=(8, 4))\n",
@@ -994,39 +1004,42 @@
         "    plt.savefig(f'{base_dir}/output/training_loss.png')\n",
         "    plt.show()\n",
         "\n",
-        "train()"
+        "# Run training\n",
+        "try:\n",
+        "    train()\n",
+        "except Exception as e:\n",
+        "    print(f\"Training failed: {e}\")"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 332
+          "base_uri": "https://localhost:8080/"
         },
         "id": "kSNdEEJIMDbH",
-        "outputId": "005fd67e-332a-41a6-fdda-0a1921538a48"
+        "outputId": "e8c44bc5-b039-49c1-b0a6-079229eeb3be"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Loading dataset...\n",
-            "# of training samples: 1200\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "name 'StepLR' is not defined",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-7-2e4f05219b1f>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m    111\u001b[0m     \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    112\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 113\u001b[0;31m \u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m<ipython-input-7-2e4f05219b1f>\u001b[0m in \u001b[0;36mtrain\u001b[0;34m()\u001b[0m\n\u001b[1;32m     39\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     40\u001b[0m     \u001b[0moptimizer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0moptim\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mAdam\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparameters\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlr\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mopt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 41\u001b[0;31m     \u001b[0mscheduler\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mStepLR\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moptimizer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstep_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m30\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgamma\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     42\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     43\u001b[0m     \u001b[0msave_path\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mopt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moutf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mopt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodel_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'StepLR' is not defined"
+            "# of training samples: 1200\n",
+            "Loaded checkpoint from epoch 6\n",
+            "Epoch 7, Loss: 2481.4754, Time: 157.40s\n",
+            "Epoch 8, Loss: 1831.9597, Time: 148.98s\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "qRilqW1aWqze"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
